--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Pentomino</title>
+    <title>Ripple Effect DLX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
