Add 10x10 sample puzzle; begin work on svg drawing

--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,12 @@
             <hr />
         </div>
         <div cass="row">
+            <div class="grid-wrapper">
+                <svg id="grid" class="grid"></svg>
+            </div>
+        </div>
+        <div cass="row">
+            <button id="solve" class="btn btn-xs btn-primary">Solve</button>
         </div>
     </div>
 </body>
