Animate the solving process

--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,7 @@
         </div>
         <div cass="row">
             <button id="solve" class="btn btn-xs btn-primary">Solve</button>
+            <button id="cancel" class="btn btn-xs btn-default">Cancel</button>
         </div>
     </div>
 </body>
