--- a/web/index.html
+++ b/web/index.html
@@ -25,12 +25,19 @@
             </div>
         </div>
         <div cass="row">
-            <select id="selectPuzzle">
-                <option value="8x8" selected>8x8</option>
-                <option value="10x10">10x10</option>
-            </select>
-            <button id="solve" class="btn btn-xs btn-primary">Solve</button>
-            <button id="cancel" class="btn btn-xs btn-default">Cancel</button>
+            <div id="controlPanel">
+                <div>
+                    <select id="selectPuzzle">
+                        <option value="8x8" selected>8x8</option>
+                        <option value="10x10">10x10</option>
+                    </select>
+                    <button id="solve" class="btn btn-xs btn-primary">Solve</button>
+                    <button id="cancel" class="btn btn-xs btn-default">Cancel</button>
+                </div>
+                <div id="stepsContainer">
+                    Steps: <span id="stepCount"></span>
+                </div>
+            </div>
         </div>
     </div>
 </body>
